Fix order of buttons on graph, adjust positioning of Export button to be centered on max view and left-aligned on side-by-side

--- a/src/dataflow/components/dataflow-program-graph.sass
+++ b/src/dataflow/components/dataflow-program-graph.sass
@@ -59,17 +59,18 @@
     border: 0
     outline: 0
     border-radius: 3px
-    &.program
+    &.data
       margin-left: auto
     &:hover
       background-color: $data-storage-orange-node
     &:active
       background-color: $data-storage-orange-control
     &.export
-      margin-left: 0
       border: 2px solid $gray-mid
       color: $gray-text
       background-color: #ffffff
+      &.wide
+        margin-left: calc(50% - 100px)
       &:hover
         background-color: $gray-light-hover
       &:active
